<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/linear_layout_margin_top"
    android:layout_marginStart="@dimen/margin"
    android:layout_marginEnd="@dimen/margin"
    android:layout_marginBottom="@dimen/margin">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding"
        android:text="@string/login_title"
        android:textColor="@color/brown_"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/login_email_et"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/et_margin_top"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="@dimen/drawable_padding"
        android:gravity="center_vertical"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="@dimen/padding"
        android:singleLine="true"
        android:textColor="@color/brown_"
        android:textColorHint="@color/brown"
        android:textSize="@dimen/label_text_size" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/brown_" />

    <EditText
        android:id="@+id/login_password_et"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/et_margin_top"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="@dimen/drawable_padding"
        android:gravity="center_vertical"
        android:hint="@string/paswword_txt"
        android:inputType="textPassword"
        android:padding="@dimen/padding"
        android:singleLine="true"
        android:textColor="@color/brown_"
        android:textColorHint="@color/brown"
        android:textSize="@dimen/label_text_size" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/brown_" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/et_margin_top"
        android:background="@drawable/btn_shape"
        android:text="@string/login_txt"
        android:textColor="@color/green"
        android:textSize="@dimen/label_text_size"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/layout_margin_top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/txt"
            android:textColor="@color/brown_"
            android:textSize="@dimen/label_text_size" />

        <TextView
            android:id="@+id/register_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/reg_txt"
            android:textColor="@color/brown_"
            android:textStyle="bold"
            android:textSize="@dimen/label_text_size"
            android:layout_marginStart="@dimen/margin_start"/>

    </LinearLayout>

</LinearLayout>